# RemoSwitch

./: README.md
.github/workflows/: build_control_programs.yaml  build_frimware.yaml
Firmware/: control.py  platformio.ini
Firmware/include/: brd_ctrl.h  intr.h  queued_task.h  sd_mux.h  util.h
Firmware/include/self_tusb/: ch32_usbfs_reg.h  usbfs.h
Firmware/src/: 0001-Modify-tinyusb.patch  brd_ctrl.c  intr.c  led.c  main.c  queued_task.c  sd_mux.c  usb_descriptors.c  util.c  write.c
Firmware/src/self_tusb/usbfs/: driver.c
Firmware/src/tinyusb/src/common/: tusb_private.h
Firmware/src/tinyusb/src/device/: usbd.c
Hardware/: BOM_TF_MUX_TF_MUX v0.0.5-RC1.csv  BOM_TF_MUX_v0.8.0-rc1.csv  PickAndPlace_PCB_v0.0.5-RC1.xlsx  PickAndPlace_TF_MUX_v0.8.0-rc1.xlsx  TF_MUX.epro
Hardware/v0.8.0-rc1/: TF_MUX_v0.8.0-rc.epro
Hardware/v0.8.0-rc2-a/: BOM_remo_v0.8.0-rc2-a.csv  PickAndPlace_remo_v0.8.0-rc2.xlsx  remo-v0.8.0-rc2-a.epro
Program/: Cargo.toml
Program/src/: conf.rs  hid_cmds.rs  main.rs
Software/: .clang-format  .gitmodules  Cargo.toml  hid_test.py  platformio.ini
Software/include/: board.h  cdc.h  config.h  led.h  tusb_config.h  usb.h  util.h  write.h
Software/include/self_tusb/: fsdev.h  fsdev_ch32.h  fsdev_type.h
Software/src/: brd_ctrl.c  callback.c  cdc.c  conf.rs  hid_cmds.rs  led.c  main.c  main.rs  sd_mux.c  usb.c  usb_descriptors.c  util.c  write.c
Software/src/self_tusb/: custom_usbd.c  merge.c
Software/src/self_tusb/fsdev/: driver.c
