[package]
name = "tf_mux"
authors = ["Ling Wang <lingwang@wcysite.com>"]
version = "0.1.0"
edition = "2024"
description = "Control program for the TF MUX device"
license = "AGPL-3.0-or-later"

[dependencies]
clap = { version = "4.5.39", features = ["derive"] }
hidapi = "2.6.3"

[profile.release]
panic = "abort"
strip = true
opt-level = "z"
lto = true
