[package]
name = "tf_mux"
authors = ["Ling Wang <lingwang@wcysite.com>"]
version = "0.1.0"
edition = "2024"
description = "Control program for the TF MUX device"
license = "AGPL-3.0-or-later"

[dependencies]
clap = { version = "4.5.39", features = ["derive"] }
hidapi = "2.6.3"

[profile.release]
panic = "abort"
strip = true
opt-level = "z"
lto = true

[workspace.metadata.cross.target.x86_64-unknown-linux-gnu]
pre-build = [
    "dpkg --add-architecture $CROSS_DEB_ARCH",
    "apt-get update && apt-get --assume-yes install libudev-dev:$CROSS_DEB_ARCH"
]

[workspace.metadata.cross.target.aarch64-unknown-linux-gnu]
pre-build = [
    "dpkg --add-architecture $CROSS_DEB_ARCH",
    "apt-get update && apt-get --assume-yes install libudev-dev:$CROSS_DEB_ARCH"
]

[workspace.metadata.cross.target.aarch64-unknown-linux-musl]
pre-build = [
    "dpkg --add-architecture $CROSS_DEB_ARCH",
    "apt-get update && apt-get --assume-yes install libudev-dev:$CROSS_DEB_ARCH musl:$CROSS_DEB_ARCH"
]

[workspace.metadata.cross.target.riscv64gc-unknown-linux-gnu]
pre-build = [
    "dpkg --add-architecture $CROSS_DEB_ARCH",
    "apt-get update && apt-get --assume-yes install libudev1:$CROSS_DEB_ARCH libudev-dev:$CROSS_DEB_ARCH"
]

[workspace.metadata.cross.target.riscv64gc-unknown-linux-musl]
pre-build = [
    "dpkg --add-architecture $CROSS_DEB_ARCH",
    "apt-get update && apt-get --assume-yes install libudev1:$CROSS_DEB_ARCH libudev-dev:$CROSS_DEB_ARCH musl:$CROSS_DEB_ARCH"
]
